--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "pinia": "^2.1.3",
     "quasar": "^2.12.0",
     "vue": "^3.3.4",
+    "vue-cropperjs": "^5.0.0",
     "vue-router": "^4.2.2"
   },
   "devDependencies": {
@@ -29,6 +30,7 @@
     "@tsconfig/node18": "^2.0.1",
     "@types/jsdom": "^21.1.1",
     "@types/node": "^18.16.18",
+    "@types/vue-cropperjs": "^4.1.2",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vue/eslint-config-prettier": "^7.1.0",
     "@vue/eslint-config-typescript": "^11.0.3",
